# Explainable_ai

./: main.py  pyproject.toml  requirements.txt  start_with_uv.txt
0_introduction/: 0_Introduction.ipynb  shap_background_data.ipynb  shap_intro.ipynb
Regression_case_study/: regression_shap.ipynb
